update NthLargestSalary.java